# LibrarySystem

./: Book.cpp  Book.h  BookManagement.cpp  BookManagement.h  CMakeLists.txt  Documentation.txt  EBook.cpp  EBook.h  Library.cpp  Library.h  PrintedBook.cpp  PrintedBook.h  README.md  User.cpp  User.h  UserManagement.cpp  UserManagement.h  main.cpp
